--- a/src/views/DashboardV2/DashboardComponents/BoringUser/BoringUser.scss
+++ b/src/views/DashboardV2/DashboardComponents/BoringUser/BoringUser.scss
@@ -1,5 +1,5 @@
 .boring-user {
-	color: darken($static-grey, 20%);
+	color: darken($static-grey, 21%);
 	font-size: 4rem;
 	display: flex;
 	justify-content: center;
